# pomodoro

./: Cargo.toml  build.rs  justfile
src/: circle_widget.rs  config.rs  main.rs  notifications.rs  precomputed.rs  stats.rs  timer.rs  ui.rs  utils.rs
