[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.2" }
rodio = "0.17.3"
image = "0.25.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8.12"
directories = "5.0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }
